[package]
name = "mark"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
colored = "2.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
walkdir = "2.5.0"
toml = "0.8.22"
